# handwrite

./: .gitignore  AGENTS.md  README.en.md  README.md  README.zh-CN.md  findings.md  handwrite-design.md  handwrite-implementation-guide.md  progress.md  pyproject.toml  task_plan.md
data/papers/: cornell.json  english_practice.json  error_notebook.json  essay_grid.json  mind_map.json  staff.json
data/prototypes/style_楷书/: manifest.json
demo/: __init__.py  app.py
scripts/: build_font_prototype_pack.py  build_font_prototype_pack_tuned.py  build_prototype_library.py  digitize.py  download_data.py  evaluate.py  extract_style_from_scan.py  note_session.py  personalize.py  preprocess.py  train.py
src/handwrite/: __init__.py  composer.py  exporter.py  prototypes.py  styles.py
src/handwrite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_animation.py  test_ar.py  test_casia_parser.py  test_collaboration.py  test_composer.py  test_data_interfaces.py  test_dataset.py  test_demo.py  test_digitization.py  test_discriminator.py  test_download_data.py  test_dynamics.py  test_engine.py  test_evaluate.py  test_exporter.py  test_formula.py  test_generate_pages.py  test_generator.py  test_grading.py  test_note_session_cli.py  test_ocr_style.py  test_package.py  test_papers.py  test_personalization.py  test_preprocess.py  test_preprocess_cli.py  test_preprocess_pipeline.py  test_prototypes.py  test_quality.py  test_semantic.py  test_style_mixing.py  test_styles.py  test_summary.py  test_temporal.py  test_train_engine.py  test_train_script.py
(+101 files in other folders)
